# mvtrans

./: .gitignore  .travis.yml  Cargo.toml  README.md  findings.md
src/: lib.rs  main.rs  parser.rs  patcher.rs
tests/: parser_test.rs  patcher_test.rs
tests/expected_files/: 101_then_401.txt  102_then_402.txt  escaped_quotes.txt
tests/expected_files/parser/: 101_then_401.txt  Map101_then_401.txt  Map102_then_402.txt  Mapescaped_quotes.txt
tests/expected_files/patcher/: 101_then_401.json  Map102_then_402.json  comments.json  no_translation_given.json  spaces_before_translation.json
tests/input_files/: escaped_quotes.json
tests/input_files/parser/: 102_then_402.json
tests/input_files/patcher/: 101_then_401.txt  Map101_then_401.txt  Map102_then_402.txt  Mapcomments.txt  Mapno_translation_given.txt  Mapspaces_before_translation.json  Mapspaces_before_translation.txt  comments.json  comments.txt  no_translation_given.json  no_translation_given.txt  spaces_before_translation.txt
