[package]
name = "mvtrans"
version = "0.3.0"
authors = ["Connor"]

[dependencies]
clap = "~2.31"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "0.5.1"

[dependencies.serde_json]
version = "~1.0"
features = ["preserve_order"]

[dependencies.rusqlite]
version = "~0.13.0"
features = ["bundled"]